templates/css/styles.css
/* ... */
.btn, a, .btn:hover {
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
    color: #fff;
}

.btn:hover, .btn:focus, .btn.focus {
    color: #fff;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
}

::selection {
    background: #f19906;
    color: #FFF;
    text-shadow: none;
}

::-moz-selection {
    background: #f19906; /* Firefox */
    color: #FFF;
    text-shadow: none;
}

::-webkit-selection {
    background: #f19906; /* Safari */
    color: #FFF;
    text-shadow: none;
}

html {
    width: 100%;
    height: 100%;
}

body {
    width: 100%;
    height: 100%;
    background-color: #f9fafb;
    font-family: 'Montserrat', sans-serif;
    line-height: 1.3em;
    font-size: 13px;
    font-weight: 300;
    -webkit-font-smoothing: subpixel-antialiased;
    -webkit-font-smoothing: antialiased !important;
    -moz-osx-font-smoothing: grayscale;
    color: #16191f;
}

.btn-link {
    color: #16191f;
    word-break: normal;
    word-break: break-all;
    word-break: keep-all;
}

.btn-link:hover {
    color: #f19906;
    text-decoration: underline;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'gotham_nvvbold', sans-serif;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    color: #16191f;
}

a:hover, a:focus {
    text-decoration: none;
    color: #f19906;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
}

h2 {
    font-size: 40px;
}
.mb30 {
    margin-bottom: 30px;
}
{
margin-bottom: 32px;
text-transform: uppercase;
}
h3 {
    font-size: 20px;
}

.mt5 {
    margin-top: 5px;
}

.mr0 {
    margin-right: 0 !important;
}

.mb0 {
    margin-bottom: 0 !important;
}

.mb60 {
    margin-bottom: 60px;
}

.mt30 {
    margin-top: 30px;
}

.mt15 {
    margin-top: 15px;
}

.w135 {
    width: 135px;
}

.red {
    color: #ec1d25;
}

.brown {
    color: #a77b25;
}

.purple {
    color: #c6046d;
}

.pl0 {
    padding-left: 0;
}

.pr0 {
    padding-right: 0;
}

.mh400 {
    min-height: 400px;
}

.pad0 {
    padding-right: 0;
    padding-left: 0;
}

.mb200 {
    margin-bottom: 200px;
}

.mt70 {
    margin-top: 70px !important;
}

.mt60 {
    margin-top: 60px;
}

.mt120 {
    margin-top: 120px;
}

.mt0 {
    margin-top: 0 !important;
}

.mt106 {
    margin-top: 106px;
}

.bor_none {
    border: none !important;
}

*, *:before, *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}

html, body {
    position: relative;
    height: 100%;
}

#page {
    height: 100%;
}

section.section_intro {
    padding: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    /*justify-content: center;*/
    align-items: center;
    align-content: stretch;
}

.w_customerServices_content {
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-end;
    align-items: center;
    align-content: stretch;
}

.display_table {
    display: table;
}

.table_content {
    display: table-cell;
    vertical-align: middle;
}

.invisible {
    transition: opacity .5s ease;
    opacity: 0;
}

.visible {
    transition: opacity .5s ease;
    opacity: 1;
}

.no-js #loader {
    display: none
}

.js #loader {
    display: block;
    position: absolute;
    left: 100px;
    top: 0
}

.se-pre-con {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 9999;
    background: url('../images/preloader.gif') center no-repeat #fff
}

.nav_top {
    padding-top: 30px
}

#menuwrap {
    position: relative
}

#menu {
    position: absolute;
    width: 100%;
    z-index: 1000;
    background: #2f2f2f;
}

#content {
    position: relative
}

.cf:before, .cf:after {
    content: " ";
    display: table
}

.cf:after {
    clear: both
}

#menu.fixed {
    position: fixed;
    top: 0;
    z-index: 99
}

.back-to-top {
    visibility: hidden;
    background-color: #fff;
    color: #ffa507;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    text-align: center;
    line-height: 48px;
    position: fixed;
    bottom: 65px;
    right: 35px;
    z-index: 90;
    cursor: pointer;
    opacity: 0;
    -webkit-transform: translateZ(0);
    transition: all .6s;
    box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
}

.back-to-top .fa {
    font-size: 18px;
    color: #fff;
    vertical-align: middle
}

.back-to-top:hover {
    background-color: #444;
    opacity: 1
}

.back-to-top.show {
    visibility: visible;
    bottom: 8px;
    opacity: 1;
}
.back-to-top-intro{
    position: absolute;
}
.animated-modal {
    max-width: 1142px;
    overflow: hidden;
    transform: translateY(-50px);
    transition: all .7s
}

.animated-modal h2, .animated-modal p, .animated-modal .frm_register {
    transform: translateY(-50px);
    opacity: 0;
    transition-property: transform, opacity;
    transition-duration: .4s
}

.fancybox-slide--current .animated-modal, .fancybox-slide--current .animated-modal h2, .fancybox-slide--current .animated-modal p, .fancybox-slide--current .animated-modal .frm_register {
    transform: translateY(0);
    opacity: 1
}

.fancybox-slide--current .animated-modal h2 {
    transition-delay: .1s
}

.fancybox-slide--current .animated-modal p {
    transition-delay: .3s;
}

.fancybox-slide--current .animated-modal .frm_register {
    transition-delay: .5s;
}

.navbar {
    position: absolute;
    z-index: 200;
    top: 0;
    left: 0;
    width: 100%;
    border-radius: 0;
}

.navbar-brand {
    background: url('../images/1x/logo.svg') no-repeat;
    width: 220px;
    height: 60px;
    text-indent: -999999px;
    display: block;
}
/* ... */

